# Faithflix

./: gradle.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/primeplay/faithflix/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/primeplay/faithflix/: AppCheck.java  BaseActivity.java  GreetingsActivity.java  HelperUtils.java  ModStopper.java  OnTimeClickListener.java  Prime.java  ServerError.java  Utils.java  VPNUtils.java
app/src/main/res/drawable/: bg_detail_gradient.xml  dot_active.xml  dot_inactive.xml
app/src/main/res/layout/: activity_greetings.xml  activity_live_tvplayer.xml  activity_login_signup.xml  activity_main.xml  activity_mod_stopper.xml  activity_movie_details.xml  activity_prime.xml  activity_server_error.xml  activity_web_series_details.xml  content_item_large.xml  continue_playing_item.xml  fragment_account.xml  fragment_home.xml  fragment_more_all_items.xml  item_thumbnail.xml  item_time_interval.xml  live_player_controller.xml  live_tv_channel_item.xml  movie_item.xml  program_item.xml  schedulder_items.xml  trending_item.xml  view_slider_item.xml
app/src/main/res/layout-land/: activity_live_tvplayer.xml  live_player_controller.xml
app/src/main/res/menu/: bottom_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  style.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
